--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 $servername = "database";
 $username = "root";
 $password = "123";
-$dbname = "shiju";
+$dbname = "shdb";
 
 // Create connection
 $conn = new mysqli($servername, $username, $password, $dbname);
@@ -11,7 +11,7 @@ if ($conn->connect_error) {
   die("Connection failed: " . $conn->connect_error);
 }
 
-$sql = "SELECT firstname, EmpID FROM shiju";
+$sql = "SELECT firstname, EmpID FROM shdb";
 $result = $conn->query($sql);
 
 if ($result->num_rows > 0) {
